# SyntaxHighlighter

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  TODO.txt  main.cpp
config/: build_ios.sh  clear.sh  config.h  config.h.in  generate_output.ps1
documentation/example_output/: factorial_via_iteration_out.html  factorial_via_recursion_out.html  fibonacci_out.html  hello_world_out.html  is_leap_year_out.html  largest_from_three_out.html  odd_or_even_out.html  reverse_a_number_out.html  sorting_array_ascending_out.html  sum_of_two_numbers_out.html
documentation/module/: abc.txt  automata_table.xlsx
documentation/scanner/: tmp.txt
includes/: CMakeLists.txt
includes/internal/headers/common/: file_wrapper.h  run.h
includes/internal/headers/exceptions/: cannot_create_token_not_from_finishing_state.h  error_state_reached.h  unknown_return_code.h  unknown_symbol.h  wrong_input_alphabet.h
includes/internal/headers/model/: scanner.h
includes/internal/headers/model/automata/: automata.h  state.h
includes/internal/headers/model/token/: base_token.h  token.h
includes/internal/sources/common/: run.cpp  statistics.cpp
includes/internal/sources/model/: scanner.cpp
includes/internal/sources/model/automata/: automata.cpp  state.cpp
includes/internal/sources/model/token/: base_token.cpp  token.cpp
includes/syntax_colorizer_lib/headers/common/: file_wrapper.h
includes/syntax_colorizer_lib/headers/exceptions/: error_state_reached.h
includes/syntax_colorizer_lib/headers/model/automata/: automata.h  state.h
includes/syntax_colorizer_lib/headers/model/token/: base_token.h  primitive_token.h  token.h
includes/syntax_colorizer_lib/sources/common/: file_wrapper.cpp
includes/syntax_colorizer_lib/sources/model/automata/: state.cpp
includes/syntax_colorizer_lib/sources/model/token/: base_token.cpp  foundation.cpp  token.cpp
sources/: config.cpp  config.h  file_wrapper.cpp  file_wrapper.h  run.cpp  run.h
sources/common/: statistics.cpp  statistics.h
sources/scanner/: Automata.cpp  Automata.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  scanner.cpp  scanner.h
sources/scanner/automata/: Automata.cpp  Automata.h  State.cpp  State.h  automata.cpp  automata.h  state.cpp  state.h
sources/scanner/exceptions/: ErrorStateReached.cpp  ErrorStateReached.h  InvalidTokenConstructor.cpp  InvalidTokenConstructor.h  WrongInputAlphabet.cpp  WrongInputAlphabet.h  cannot_create_token_not_from_finishing_state.h  unable_to_create_unknown_code_token.h  unknown_return_code.h  wrong_input_alphabet.h
sources/scanner/token/: CodeType.cpp  CodeType.h  InputAlphabet.cpp  InputAlphabet.h  Token.cpp  Token.h  token.cpp  token.h
tests/: CMakeLists.txt  main_tests.cpp
tests/input/c_programs/: factorial_via_iteration.c  fibonacci.c  is_leap_year.c  odd_or_even.c  reverse_a_number.c  sum_of_two_numbers.c
tests/input/expressions/: i2.txt  i3.txt  i4.txt
tests/input/test_data/: random_strings_values.txt
tests/model/: automata_test.cpp  base_token_tests.cpp  primitive_token_test.cpp  start_tests.cpp  state_test.cpp  token_test.cpp
tests/scanner/: run_tests.cpp  token_test.cpp
tests/scanner/input/: i1.txt
tests/scanner/input/c_programs/: factorail_via_recursion.c  factorial_via_iteration.c  largest_from_three.c  sorting_array_ascending.c
